# coreclr

./: .gitignore  clrdefinitions.cmake  init-tools.sh
cross/: build-rootfs.sh
src/: CMakeLists.txt
src/ToolBox/SOS/Strike/: util.cpp
src/coreclr/hosts/inc/: coreclrhost.h
src/coreclr/hosts/unixcoreruncommon/: coreruncommon.cpp
src/gc/: gc.h
src/jit/: CMakeLists.txt  codegencommon.cpp
src/linux-profiler/: CMakeLists.txt  profiler.cpp  profiler.h  profilermanager.cpp  tracelog.cpp  tracelog.h
src/linux-profiler/amd64/: archhelpers.cpp
src/linux-profiler/arm/: archhelpers.cpp  asmhelpers.S
src/linux-profiler/config/: commonconfigconversions.cpp  commonconfigconversions.h  environmentconfigprovider.cpp  loggerconfigconversions.cpp  loggerconfigconversions.h  profilerconfig.cpp  profilerconfig.h  profilerconfigconversions.cpp  profilerconfigconversions.h  tracelogconfigconversions.cpp  tracelogconfigconversions.h
src/linux-profiler/i386/: archhelpers.cpp  asmhelpers.S
src/linux-profiler/info/: classinfo.cpp  classinfo.h  functioninfo.cpp  functioninfo.h  threadinfo.h
src/linux-profiler/misc/: default_delete.h  intervalsplitter.h  localtime.cpp  localtime.h  sigaction.cpp  sigaction.h
src/linux-profiler/storage/: classstorage.h  functionstorage.h  livestorage.h  mappedstorage.h  ringbuffer.h  threadstorage.h
src/linux-profiler/sync/: binarysemaphore.h
src/linux-profiler/trace/: basetrace.cpp  basetrace.h  commontrace.cpp  commontrace.h  cputrace.cpp  cputrace.h  eventchannel.cpp  eventchannel.h  executiontrace.cpp  executiontrace.h  memorytrace.cpp  memorytrace.h
src/pal/: CMakeLists.txt
src/pal/inc/: unixasmmacrosarm.inc
src/pal/src/: configure.cmake
src/pal/src/map/: map.cpp
src/profiler/: CMakeLists.txt  ProfilerInfo.cpp  ProfilerInfo.h  avlnode.cpp  avlnode.h  basehdr.h  basehlp.cpp  basehlp.h  classfactory.cpp  classfactory.h  container.hpp  dllmain.cpp  entrypoint.cpp  guids.cpp  log.cpp  log.h  profiler.cpp  profiler.h  profilercallback.cpp  profilercallback.h
src/profiler/amd64/: asmhelpers.S
src/profiler/arm/: asmhelpers.S
src/vm/: CMakeLists.txt  gdbjit.cpp  gdbjit.h  util.cpp
src/vm/arm/: asmhelpers.S  ehhelpers.S
src/zap/: zapimage.cpp
